task5/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: booking-ingress
spec:
  gateways:
  - booking-gateway
  hosts:
  - booking.local
  http:
  # Маршрутизация по x-version header (создается EnvoyFilter)
  - match:
    - headers:
        x-version:
          exact: v2
    route:
    - destination:
        host: booking-service
        subset: v2

  # Canary release 90/10
  - route:
    - destination:
        host: booking-service
        subset: v1
      weight: 90
    - destination:
        host: booking-service
        subset: v2
      weight: 10
